snippets/out-4.txt
Mytest.c: In function 'XS_xs_foo':
Mytest.c:176:31: error: 'XS_unpack_struct' undeclared (first
use in this function); did you mean 'XS_unpack_struct_foo'?
  176 |     struct foo      var = XS_unpack_struct foo(ST(0))
      |                           ^~~~~~~~~~~~~~~~
      |                           XS_unpack_struct_foo
Mytest.c:176:31: note: each undeclared identifier is reported
only once for each function it appears in
Mytest.c:176:48: error: expected ',' or ';' before 'foo'
  176 |     struct foo      var = XS_unpack_struct foo(ST(0))
      |                                            ^~~
make: *** [Makefile:341: Mytest.o] Error 1
